--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=mongodb://localhost/ADAPassport
 
+MONGODB_URI=mongodb+srv://marcuswestbrooks:ninjahawk4@adacluster.nmivg48.mongodb.net/?retryWrites=true&w=majority
